--- a/wiki/index.html
+++ b/wiki/index.html
@@ -407,7 +407,11 @@ Error message and password prompt
 
 <li>$:/state/tab--509593366</li>
 
+<li>$:/state/tab--697582678</li>
+
 <li>$:/state/tab--86143343</li>
+
+<li>$:/state/tab--959111941</li>
 
 <li>$:/state/tab-102244450</li>
 
@@ -745,6 +749,8 @@ Error message and password prompt
 
 <li>Note</li>
 
+<li>PublishSite</li>
+
 <li>Recent updates to Stroll</li>
 
 <li>RenameTags</li>
@@ -762,6 +768,8 @@ Error message and password prompt
 <li>StrollTips</li>
 
 <li>The TiddlyWiki layout</li>
+
+<li>TiddlyWiki</li>
 
 <li>Troubleshooting</li>
 
@@ -17018,11 +17026,11 @@ exports.context = contextWidget;
 <div created="20200616150438012" modified="20200616150442894" title="$:/state/tab--1638394651">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418132348763" modified="20200616183720809" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Palette</pre>
+<div created="20200418132348763" modified="20200619183722206" title="$:/state/tab--1963855381">
+<pre>$:/plugins/sq/Stories/settings</pre>
 </div>
-<div created="20200616145129728" modified="20200616155335579" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Basics</pre>
+<div created="20200616145129728" modified="20200619183702102" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Advanced</pre>
 </div>
 <div created="20200429214724797" modified="20200617024746669" title="$:/state/tab--219645345">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Plugins</pre>
@@ -17030,8 +17038,14 @@ exports.context = contextWidget;
 <div created="20200423200357785" modified="20200423200357785" title="$:/state/tab--509593366">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
+<div created="20200619183736594" modified="20200619183736594" title="$:/state/tab--697582678">
+<pre>$:/core/ui/ControlPanel/Settings/CodeMirror</pre>
+</div>
 <div created="20200429214732957" modified="20200616183649159" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
+</div>
+<div created="20200619183706276" modified="20200619183709464" title="$:/state/tab--959111941">
+<pre>$:/core/ui/ControlPanel/Stylesheets</pre>
 </div>
 <div created="20200423200356184" modified="20200423200356184" title="$:/state/tab-102244450">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
@@ -17042,8 +17056,8 @@ exports.context = contextWidget;
 <div created="20200616155538724" modified="20200616155538724" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
 </div>
-<div created="20200418121928767" modified="20200619183407272" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200418121928767" modified="20200619183740432" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200616144657561" modified="20200619183548309" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -17081,7 +17095,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200619175138680" list="$:/ControlPanel [[goalng CI build 二进制/tmp/zero-redis: No such file or directory]] musl Note" modified="20200619183356210" title="$:/StoryList">
+<div created="20200619175138680" list="StrollTips musl Note" modified="20200619183959538" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521135635795" tags="$:/giffmex/bigeditarea" title="$:/tags/EditToolbar">
@@ -18107,8 +18121,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div author="JeremyRuston" core-version="&gt;=5.0.0" created="20200616152848736" dependents="" description="Basic theme" modified="20200616152848736" name="Vanilla" original-plugin-type="theme" original-tags="" original-title="$:/themes/tiddlywiki/vanilla" original-type="application/json" plugin-priority="0" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/themes/tiddlywiki/vanilla" type="text/vnd.tiddlywiki" version="5.1.22">
 <pre></pre>
 </div>
-<div created="20200616152852515" modified="20200617024743858" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
-<pre>vim</pre>
+<div created="20200616152852515" modified="20200619183744847" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
+<pre></pre>
 </div>
 <div created="20200502174947648" modified="20200521150758791" title="$:/temp/RenameTags/replace">
 <pre>$:/giffmex/blinks</pre>
@@ -18612,6 +18626,9 @@ Click the buttons in any tiddler to see the tiddlers they create. Save changes. 
 <div created="20200616145438998" modified="20200616145438998" title="Note">
 <pre></pre>
 </div>
+<div created="20200619184117891" modified="20200619184117891" title="PublishSite">
+<pre></pre>
+</div>
 <div created="20200510030209847" modified="20200603121926259" tags="$:/giffmex/tutorials" title="Recent updates to Stroll">
 <pre>''6-3''
 
@@ -18796,15 +18813,16 @@ Each app has its strengths and drawbacks. Here is a general comparison:
 *An extensive list of plugins (see the [[TiddlyWiki toolmap|https://dynalist.io/d/zUP-nIWu2FFoXH-oM7L7d9DM]])
 *Multiple options for viewing references</pre>
 </div>
-<div created="20200616171219208" modified="20200617023455774" tags="" title="StrollTips" type="text/x-markdown">
+<div created="20200616171219208" modified="20200619184117888" tags="" title="StrollTips" type="text/x-markdown">
 <pre>[[Note]]
 [[stroll]]
-origin: https://giffmex.org/stroll/stroll.html
+[origin file](https://giffmex.org/stroll/stroll.html)
+[my commits](https://github.com/YongHaoWu/YongHaoWu.github.io/commits/master)
+[PublishSite](https://yonghaowu.github.io/wiki)
 
-## 使用的人
+## 使用TiddlyWiki的人
 * https://wiki.zhiheng.io/
-* https://yonghaowu.github.io/life/
-* </pre>
+* https://yonghaowu.github.io/life/</pre>
 </div>
 <div created="20200423141216977" modified="20200521145918984" tags="$:/giffmex/tutorials" title="The TiddlyWiki layout">
 <pre>Stroll is an adaptation of ~TiddlyWiki. Think of ~TiddlyWiki as a file drawer of notecards [the notecards are called tiddlers, a British term for a small fish]. 
@@ -18817,6 +18835,9 @@ origin: https://giffmex.org/stroll/stroll.html
 ''Activity 1: ''Close the sidebar by clicking the &lt;&lt;icon {{$:/core/images/chevron-right}} &quot;&quot;&gt;&gt; icon in the top right corner. Click it again to re-open it.
 
 &lt;/span&gt;</pre>
+</div>
+<div created="20200619184117892" modified="20200619184117892" title="TiddlyWiki">
+<pre></pre>
 </div>
 <div created="20200516151401558" modified="20200606180608575" tags="$:/giffmex/tutorials" title="Troubleshooting">
 <pre>!Autocomplete problems
