--- a/wiki/index.html
+++ b/wiki/index.html
@@ -17095,7 +17095,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200619175138680" list="StrollTips musl Note" modified="20200619183959538" title="$:/StoryList">
+<div created="20200619175138680" list="PublishSite StrollTips musl Note" modified="20200619184219256" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521135635795" tags="$:/giffmex/bigeditarea" title="$:/tags/EditToolbar">
@@ -18813,12 +18813,15 @@ Each app has its strengths and drawbacks. Here is a general comparison:
 *An extensive list of plugins (see the [[TiddlyWiki toolmap|https://dynalist.io/d/zUP-nIWu2FFoXH-oM7L7d9DM]])
 *Multiple options for viewing references</pre>
 </div>
-<div created="20200616171219208" modified="20200619184117888" tags="" title="StrollTips" type="text/x-markdown">
+<div created="20200616171219208" modified="20200619184239595" tags="" title="StrollTips" type="text/x-markdown">
 <pre>[[Note]]
 [[stroll]]
+
 [origin file](https://giffmex.org/stroll/stroll.html)
+
 [my commits](https://github.com/YongHaoWu/YongHaoWu.github.io/commits/master)
-[PublishSite](https://yonghaowu.github.io/wiki)
+
+[myPublishSite](https://yonghaowu.github.io/wiki)
 
 ## 使用TiddlyWiki的人
 * https://wiki.zhiheng.io/
