--- a/wiki/index.html
+++ b/wiki/index.html
@@ -699,11 +699,7 @@ Error message and password prompt
 
 <li>CIDR</li>
 
-<li>concept</li>
-
 <li>Concept</li>
-
-<li>concept 1</li>
 
 <li>Dave Gifford</li>
 
@@ -796,6 +792,8 @@ Error message and password prompt
 <li>Welcome to Stroll</li>
 
 <li>信号的基本概念</li>
+
+<li>可重入vs幂等性</li>
 
 </ul>
 </p>
@@ -1350,8 +1348,8 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div bag="default" created="20170615081040584" modified="20200504143613685" revision="0" title="$:/config/_sq/Stories/story2" type="text/vnd.tiddlywiki">
 <pre>yes</pre>
 </div>
-<div created="20200619183447964" modified="20200619183448547" title="$:/config/AutoSave">
-<pre>yes</pre>
+<div created="20200619183447964" modified="20200619185217096" title="$:/config/AutoSave">
+<pre>no</pre>
 </div>
 <div created="20200616145157008" modified="20200616145157008" title="$:/config/DownloadSaver/AutoSave">
 <pre>yes</pre>
@@ -17072,11 +17070,11 @@ exports.context = contextWidget;
 <div created="20200616155538724" modified="20200616155538724" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
 </div>
-<div created="20200418121928767" modified="20200619183740432" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200418121928767" modified="20200619185214154" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200616144657561" modified="20200619183548309" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
 <div created="20200418122101344" modified="20200617031729562" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
@@ -17111,7 +17109,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200619175138680" list="信号的基本概念 concept" modified="20200619184700211" title="$:/StoryList">
+<div created="20200619175138680" list="" modified="20200619185209027" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521135635795" tags="$:/giffmex/bigeditarea" title="$:/tags/EditToolbar">
@@ -18152,8 +18150,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200616183644116" modified="20200616183644116" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200616161922967" modified="20200619184655167" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>concept</pre>
+<div created="20200616161922967" modified="20200619185154564" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>StrollTips</pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20200616183714956" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
 <pre>$:/themes/tiddlywiki/seamless</pre>
@@ -18381,31 +18379,7 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 
 </pre>
 </div>
-<div created="20200619184445503" modified="20200619184650741" tags="" title="concept" type="text/x-markdown">
-<pre>[[Note]]
-[[concept]]
-
-### 可重入 （[[Reentrancy]]）
-
-In [computing](https://www.wikiwand.com/en/Computing), a [computer program](https://www.wikiwand.com/en/Computer_program) or [subroutine](https://www.wikiwand.com/en/Subroutine) is called **reentrant** if multiple invocations can safely run concurrently. 
-
-[[Reentrancy]] is not the same thing as [idempotence](https://www.wikiwand.com/en/Idempotence), in which the function may be called more than once yet generate exactly the same output as if it had only been called once. 
-
-
-
-#### 幂等性（[[Idempotence]]）
-
-**Idempotence** whereby they can be applied multiple times without changing the result beyond the initial application. 
-
-
-
-- in [imperative programming](https://www.wikiwand.com/en/Imperative_programming), a [subroutine](https://www.wikiwand.com/en/Subroutine) with [side effects](https://www.wikiwand.com/en/Side_effect_(computer_science)) is idempotent if the system state remains the same after one or several calls, in other words if the function from the system state space to itself associated to the subroutine is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition);
-- in [functional programming](https://www.wikiwand.com/en/Functional_programming), a [pure function](https://www.wikiwand.com/en/Pure_function) is idempotent if it is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition).</pre>
-</div>
 <div created="20200619185106853" modified="20200619185106853" title="Concept">
-<pre></pre>
-</div>
-<div created="20200619184650745" modified="20200619184650745" title="concept 1">
 <pre></pre>
 </div>
 <div created="20200423144522416" modified="20200521145919666" tags="$:/giffmex/tutorials" title="Dave Gifford">
@@ -19049,6 +19023,27 @@ Click the &lt;&lt;icon {{$:/core/images/edit-button}} &quot;&quot;&gt;&gt; icon 
 3. 如果 CPU 当前正在执行这个进程的代码，则该进程的用户空间代码暂停执行，CPU 从用户态切换到内核态处理硬件中断。
 4. 终端驱动程序将 Ctrl-C 解释成一个 [[SIGINT]] 信号，记在该进程的 [[PCB]] 中（也可以说发送了一个 [[SIGINT]]信号给该进程）。
 5. 当某个时刻要从内核返回到该进程的用户空间代码继续执行之前，首先处理  [[PCB]]  中记录的信号，发现有一个 [[SIGINT]]信号待处理，而这个信号的默认处理动作是终止进程，所以直接终止进程而不再返回它的用户空间代码执行。</pre>
+</div>
+<div created="20200619184445503" modified="20200619185122464" tags="" title="可重入vs幂等性" type="text/x-markdown">
+<pre>[[Note]]
+[[Concept]]
+
+### 可重入 （[[Reentrancy]]）
+
+In [computing](https://www.wikiwand.com/en/Computing), a [computer program](https://www.wikiwand.com/en/Computer_program) or [subroutine](https://www.wikiwand.com/en/Subroutine) is called **reentrant** if multiple invocations can safely run concurrently. 
+
+[[Reentrancy]] is not the same thing as [idempotence](https://www.wikiwand.com/en/Idempotence), in which the function may be called more than once yet generate exactly the same output as if it had only been called once. 
+
+
+
+#### 幂等性（[[Idempotence]]）
+
+**Idempotence** whereby they can be applied multiple times without changing the result beyond the initial application. 
+
+
+
+- in [imperative programming](https://www.wikiwand.com/en/Imperative_programming), a [subroutine](https://www.wikiwand.com/en/Subroutine) with [side effects](https://www.wikiwand.com/en/Side_effect_(computer_science)) is idempotent if the system state remains the same after one or several calls, in other words if the function from the system state space to itself associated to the subroutine is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition);
+- in [functional programming](https://www.wikiwand.com/en/Functional_programming), a [pure function](https://www.wikiwand.com/en/Pure_function) is idempotent if it is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition).</pre>
 </div>
 
 
